improved shuffleTheFunctions function

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <title>Korean Language Learning App</title>
   </head>
   <body>
-    <h1>I am a _noun_</h1>
+    <h1>I am a ________</h1>
     <button type="button" id="iAmBlankbutton">Click Me!</button>
-    <div id="iamBlankLine">I am a _noun_.</div>
+    <div id="iamBlankLine">I am a _______.</div>
 
-    <h1>This/That blank is a _noun__</h1>
+    <h1>This/That person is a _______</h1>
     <button type="button" id="thisThatThatAdjLinebutton">Click Me!</button>
-    <div id="thisThatThatAdjLine">This/That blank is a _noun__.</div>
+    <div id="thisThatThatAdjLine">This/That person is a _______.</div>
 
-    <h1>That/This is a _____</h1>
+    <h1>This/That is a _______</h1>
     <button type="button" id="thatThisIsABlankbutton">Click Me!</button>
-    <div id="thatThisIsABlankLine">ThatThis is a _____.</div>
+    <div id="thatThisIsABlankLine">This/That is a _______.</div>
     
     <h1>Oneoff phases</h1>
     <button type="button" id="greetingPhrasesButton">Click Me!</button>
